// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> AltinnFilterChip--- Snapshot +++ Should match snapshot with delete icon visible 1`] = `
<div
  className="MuiChip-root AltinnFilterChip-chip-1 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-deletableColorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-clickable MuiChip-deletable"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label"
  >
    mock label
  </span>
  <i
    className="ai ai-delete MuiChip-deleteIcon MuiChip-deleteIconOutlinedColorPrimary"
    onClick={[Function]}
  />
</div>
`;

exports[`>>> AltinnFilterChip--- Snapshot +++ Should match snapshot with sort icon visible 1`] = `
<div
  className="MuiChip-root mock-class-name AltinnFilterChip-chip-1 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-deletableColorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-clickable MuiChip-deletable"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label"
  >
    mock label
  </span>
  <i
    className="AltinnFilterChip-down-3 MuiChip-deleteIcon MuiChip-deleteIconOutlinedColorPrimary"
    onClick={[Function]}
  />
</div>
`;

exports[`>>> AltinnFilterChip--- Snapshot +++ Should match snapshot with the least amount of params 1`] = `
<div
  className="MuiChip-root AltinnFilterChip-chip-1 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-clickable"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label"
  >
    mock label
  </span>
</div>
`;
